@@ -1,9 +1,10 @@
 """ ATFolder
 """
-from eea.depiction.browser.interfaces import IImageView
-from Products.Five.browser import BrowserView
 from zope.interface import implements
 from zope.publisher.interfaces import NotFound
+from eea.depiction.browser.interfaces import IImageView
+from Products.Five.browser import BrowserView
+from Products.CMFCore.utils import getToolByName
 
 
 class FolderImageView(BrowserView):
@@ -12,30 +13,59 @@ class FolderImageView(BrowserView):
     """
     implements(IImageView)
 
-    img = None
-    field = None
+    _has_images = None
+    _img = False
+    _field = False
+    
+    @property
+    def img(self):
+        """ img
+        """
+        if self._img is False:
+            here = '/'.join(self.context.getPhysicalPath())
+            query = {
+                'portal_type': 'Image',
+                'path': {
+                    'query': here,
+                    'depth': 1
+                },
+                'sort_on': 'getObjPositionInParent'
+            }
+            ctool = getToolByName(self.context, 'portal_catalog')
+            if 'Language' in ctool.indexes():
+                query['Language'] = 'all'
 
-    def __init__(self, context, request):
-        super(FolderImageView, self).__init__(context, request)
+            self._img = None
+            brains = ctool(**query)
+            for idx, brain in enumerate(brains):
+                if idx == 0:
+                    self._img = brain.getObject()
+                if 'cover' in brain.getId:
+                    self._img = brain.getObject()
+                    break
+        return self._img
 
-        here = '/'.join(self.context.getPhysicalPath())
-        results = self.context.portal_catalog.queryCatalog(
-                {
-                    'portal_type': 'Image',
-                    'path': {
-                        'query': here,
-                        'depth': 1,
-                        },
-                    'sort_on': 'getObjPositionInParent'
-                    },  # show_all=1, show_inactive=1,
-                )
-        self.field = None
-        self.has_images = False
+    @property
+    def has_images(self):
+        """ Has images
+        """
+        if self._has_images is None:
+            if self.img:
+                self._has_images = True
+            else:
+                self._has_images = False
+        return self._has_images
 
-        if results:
-            self.has_images = True
-            self.img = results[0].getObject()
-            self.field = self.img.getField('image')
+    @property
+    def field(self):
+        """ Field
+        """
+        if self._field is False:
+            if self.img:
+                self._field = self.img.getField('image')
+            else:
+                self._field = None
+        return self._field
 
     def display(self, scalename='thumb'):
         """ Return a bool if the scale should be displayed
